--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: mysql:latest
     environment:
       - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_USER=practica1
+      - MYSQL_PASSWORD=practica1
       - MYSQL_DATABASE=contactos_db
     ports:
       - "3307:3306"
@@ -13,7 +15,7 @@ services:
       - app_net
     volumes:
       - mysql-vol:/var/lib/mysql
-      - ./Backend/contactos_init.sql:/docker-entrypoint-initdb.d/contactos_init.sql
+      - ./Database/contactos_init.sql:/docker-entrypoint-initdb.d/contactos_init.sql
 
 networks:
   app_net:
