--- a/Frontend/front-ayd1-practica1/package.json
+++ b/Frontend/front-ayd1-practica1/package.json
@@ -14,6 +14,8 @@
     "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4",
     "zod": "^3.20.6"
   },
